# adcli

./: Makefile.am  NEWS  configure.ac
doc/: Makefile.am  adcli-devel.xml  adcli.xml
selinux/: Makefile.am  adcli.fc  adcli.te
tests/: Makefile.am  mhc.yaml  pytest.ini  readme.pytest  test_adcli.py  test_adcli_upn_des.py  test_join_delete_computer.py  topology.py  topology_controllers.py
tools/: Makefile.am  computer.c  entry.c  info.c  tools.c  tools.h
