include $(top_srcdir)/Makefile.decl

EXTRA_DIST = \
	conftest.py \
	__init__.py \
	Makefile.am \
	markers.py \
	mhc.yaml \
	pyproject.toml \
	pytest.ini \
	readme.pytest \
	requirements.txt \
	setup.cfg \
	test_adcli.py \
	topology_controllers.py \
	topology.py \
	$(NULL)

clean-local:
	rm -rf __pycache__/ artifacts/
